2008-04-22  Neil Roberts  <neil@o-hand.com>

	* .gitignore: Added #*# files

2008-04-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourscale.c
	(rbclt_behaviour_scale_initialize): Updated to use a start and and
	end parameter for both the x and y axes.

	* clutter/rbcltevent.c.in (rbclt_event_init): 
	* clutter/mkrbcltevent.rb: Removed CLUTTER_{2,3}BUTTON_PRESS.

	* clutter/extconf.rb: Changed required clutter version to 0.7.

	* .gitignore: Added a .gitignore file

2008-01-11  Neil Roberts  <bpeeluk@yahoo.co.uk>

	* clutter/extconf.rb: Bumped up Clutter version requirement to
	0.5. Removed rbclt{box,layout,padding,margin}.c because Clutter no
	longer defines them.

	* clutter/rbcltmargin.c.in: 
	* clutter/rbcltpadding.c.in: 
	* clutter/rbcltlayout.c: 
	* clutter/rbcltbox.c: 
	Removed

	* clutter/rbclutter.c (Init_clutter): Removed calls to
	rbclt_box_init, rbclt_padding_init, rbclt_margin_init and
	rbclt_layout_init.

	* clutter/rbclteffect.c (rbclt_effect_fade, rbclt_effect_scale):
	Updated to new API which only has the end state.
	(rbclt_effect_depth, rbclt_effect_move, rbclt_effect_do_path):
	Added bindings for new effects.
	(rbclt_effect_rotate): The rotate_? effects have been replaced
	with a single rotate effect which takes the axis as a parameter.

2007-10-09  Neil Roberts  <bpeeluk@yahoo.co.uk>

	* clutter/rbcltmedia.c:
	* clutter/rbcltmain.c:
	* clutter/rbcltevent.c.in:
	* clutter/rbcltbehaviourbspline.c:
	* clutter/rbcltbehaviourrotate.c:
	* clutter/rbcltcontainer.c:
	* clutter/rbcltbox.c:
	* clutter/rbcltalphafunc.c:
	* clutter-gst/rbcluttergst.c:
	Converted to GNU style indentation for the opening bracket of
	blocks folling 'if's and 'while's
